--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,11 @@
-<header class="container">
-    <div class="logo">{{name}}</div>
-    <nav>
-        <a href="#">О компании</a>
-        <a href="#">Каталог</a>
-        <a href="#">Новости</a>
-        <a href="#">Контакты</a>
-    </nav>
+<header>
+    <div class="container">
+        <div class="logo" uiSref="home">{{name}}</div>
+        <nav>
+            <a uiSref="about">О компании</a>
+            <a uiSref="catalog">Каталог</a>
+            <a uiSref="news">Новости</a>
+            <a uiSref="contacts">Контакты</a>
+        </nav>
+    </div>
 </header>
