--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -1,4 +1,4 @@
-:host{
+header{
     width: 100%;
     background: #314185;
     color: #ffffff;
@@ -6,17 +6,18 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16);
 }
 
-header{
+.container{
     display: flex;
     align-items: stretch;
     justify-content: space-between;
-    padding: 10px;
+    padding: 15px 10px;
 }
 
 .logo{
     font-size: 20px;
     text-transform: uppercase;
     font-family: 'Poiret One', cursive;
+    cursor: pointer;
 }
 
 nav{
@@ -27,5 +28,6 @@ nav{
         text-decoration: none;
         font-weight: lighter;
         padding: 5px 10px;
+        cursor: pointer;
     }
 }
