--- a/src/styles.less
+++ b/src/styles.less
@@ -8,7 +8,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    background: #f9f9f9
+    background: #eaeaea
 }
 
 .container {
@@ -16,4 +16,9 @@ body, html {
     width: 100%;
     max-width: 980px;
     padding: 0 10px;
+}
+
+a {
+    color: #314185;
+    text-decoration: none;
 }
