--- a/src/app/components/catalog/catalog.component.html
+++ b/src/app/components/catalog/catalog.component.html
@@ -10,5 +10,5 @@
         </section>
     </div>
 
-    <a uiSref="catalog">Весь каталог</a>
+    <a uiSref="catalog" *ngIf="count > 0" uiSref="catalog">Весь каталог</a>
 </div>
