--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
-<header>
+<footer>
     <div class="container">
-        <div class="logo" uiSref="home">{{name}}</div>
+        <div class="cop">© Все права защищены</div>
         <nav>
             <a uiSref="about">О компании</a>
             <a uiSref="catalog">Каталог</a>
             <a uiSref="contacts">Контакты</a>
         </nav>
     </div>
-</header>
+</footer>
