--- a/src/styles.less
+++ b/src/styles.less
@@ -12,9 +12,10 @@ body, html {
 }
 
 .container {
+    display: block;
     margin: 0 auto;
     width: 100%;
-    max-width: 980px;
+    max-width: 1040px;
     padding: 0 10px;
 }
 
