--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="cop">© Все права защищены</div>
         <nav>
-            <a uiSref="about">О компании</a>
+            <a uiSref="page.about">О компании</a>
             <a uiSref="catalog">Каталог</a>
-            <a uiSref="contacts">Контакты</a>
+            <a uiSref="page.contacts">Контакты</a>
         </nav>
     </div>
 </footer>
