--- a/src/app/components/catalog/catalog.component.less
+++ b/src/app/components/catalog/catalog.component.less
@@ -19,8 +19,10 @@
     .list{
         display: flex;
         justify-content: space-between;
+        align-items: stretch;
         flex-wrap: wrap;
         margin: 0 -15px;
+        min-height: 100%;
 
         .item{
             width: 100%/2;
