--- a/src/app/pages/catalog/catalog.component.less
+++ b/src/app/pages/catalog/catalog.component.less
@@ -39,21 +39,28 @@
     }
 
     .product{
-        display: flex;
         margin: 10px 0 25px 0;
         cursor: pointer;
         transition: all 0.3s;
         border: 1px solid transparent;
 
+        &:after{
+            content: '';
+            display: table;
+            clear: both;
+        }
         &:hover{
             box-shadow: 0 0 4px rgba(0, 0, 0, 0.11);
             border-color: rgba(0, 0, 0, 0.11);
         }
 
         .img{
-            width: 100%;
+            display: block;
+            width: 250px;
             margin: 0 10px 0 0;
+            float: left;
         }
+
         img{
             width: 100%;
         }
