--- a/src/app/pages/catalog/product/product.component.less
+++ b/src/app/pages/catalog/product/product.component.less
@@ -11,11 +11,17 @@ p {
 }
 
 .product {
-    display: flex;
+
+    &:after{
+        content: '';
+        display: table;
+        clear: both;
+    }
 
     .img {
-        width: 100%;
-        margin: 0 10px 0 0;
+        width: 300px;
+        margin: 0 20px 25px 0;
+        float: left;
     }
     img {
         width: 100%;
