--- a/src/app/components/address/address.component.html
+++ b/src/app/components/address/address.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="info">
-    <h1>Центральный офис ООО «Наземнов»</h1>
+    <h1>Центральный офис ОАО «ArkneT»</h1>
     <div class="list">
         <div class="item" *ngFor="let key of keys">
             <div class="title">{{key}}</div>
