--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <h1>Контакты</h1>
 
-<p>Тут какой-то текст о компании, мне лень писать что-то, поэтому я скопипастю</p>
-<p>Тут какой-то текст о компании, мне лень писать что-то, поэтому я скопипастю</p>
-<p>Тут какой-то текст о компании, мне лень писать что-то, поэтому я скопипастю</p>
-<p>Тут какой-то текст о компании, мне лень писать что-то, поэтому я скопипастю</p>
+<p>По вопросам просим обращаться на почту: ArkneT@hotmail.com</p>
+<p>Телефон :8 800 555 35 35 </p>
+<p>Группа в контакте vk.com/ArkneT</p>
+<p></p>
 <p>Тут какой-то текст о компании, мне лень писать что-то, поэтому я скопипастю</p>
