--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,26 +1,21 @@
 <h1>О нашей компании</h1>
 
-<p>Тут какой-то текст о компании, мне лень писать что-то, поэтому я скопипастю рыбку</p>
+<p>Российское предприятие ОАО «ArkneT» специализируется на ознакомлении с металлообрабатывающими станками с ЧПУ различных произвоителей и в большей степени направленно на знакомство и приобщение потребителя к отечественной продукции.</p>
 
-<h1>HTML Ipsum Presents</h1>
+<h1>Миссия компании</h1>
 
-<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas.
-    Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
-    semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien
-    ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi.
-    Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a
-        href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+<p>Наша миссия заключается в просвящение потребителя в области металлообрабатывающих станков с ЧПУ, ознакомить их с видами продукции различных производителей
+    а также пассильная помощь в выборе продукта.
+    <em></em>  <code></code> <a
+        href="#"></a> </p>
 
-<h2>Header Level 2</h2>
-
-<ol>
-    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-    <li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
-
-<h3>Header Level 3</h3>
+<h2>Наша компания ОАО «ArkneT» является одним из офицальных представителей компаний :</h2>
 
 <ul>
-    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-    <li>Aliquam tincidunt mauris eu risus.</li>
+    <li><strong>«АВРОРА МАШЗАВОД»</strong></li>
+    <li><strong>«РОСФРЕЗЕР»</strong></li>
+	<li><strong>«Trens»</strong></li>
+	<LI><strong>ОАО«Астраханский станкостроительный завод»</strong></LI>
 </ul>
+<h3>Сотрудники</h3>
+<p>В команде работают специалисты с большим опытом,что позволяет обеспечить помощь в подборе и внедрения в производственный цикл</p>
